# destiny-director

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  .railwayignore  .venv  CLAUDE.md  Dockerfile  Dockerfile.dev  Makefile  Procfile  README.md  atlas.hcl  docker-compose.dev.yml  docker-entrypoint.dev.sh  docker-entrypoint.sh  graft_atlas_schema_revisions_onto_db.sql  pyproject.toml  requirements.txt  setup.py  sshd_config.dev  ty.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
anchor/: cfg.py  delete_commands.py  help.py  ls.py  posts.py  schemas.py  xur.py
beacon/: __main__.py  help.py  schemas.py
beacon/modules/: ada.py  iron_banner.py  lost_sector.py  mirror.py  mirror_tracing.py  source.py  statistics.py  user_commands.py  xur.py
beacon/tests/: __init__.py  test_schemas_mirrored_channel.py  test_server_statistics.py
conduction/: bot.py  cfg.py  nav.py  schemas.py
conduction/modules/: __init__.py  autocmd.py  autoposts.py  debug.py  eververse.py  nightfall.py  nwid.py  trials.py  twab.py  weekly_reset.py  xur.py
conduction/tests/: conftest.py  test_schemas_usercommand.py
dd/anchor/: __main__.py  autopost.py  builders_link.py  bungie_api.py  controller.py  cv2_builder.py  cv2_nodes.py  cv2_raw.py  embeds.py  eververse.py  gunsmith.py  help.py  help_details.py  hybrid_post_core.py  lost_sector.py  post_json.py  posts.py  release.py  search_json.py  seed_legacy_rotations.py  source.py  utils.py  web.py  xur.py
dd/anchor/extensions/: __init__.py  ada.py  autopost_settings.py  control_panel.py  controller.py  eververse.py  gunsmith.py  iron_banner.py  lost_sector.py  portal_ops.py  posts.py  preview_wall.py  rotation_editor.py  source.py  stats_page.py  testing.py  trials.py  web_auth.py  weekly_reset.py  xur.py
dd/anchor/tests/: conftest.py  test_announcer_enabled_gate.py  test_autopost_settings.py  test_builders_link.py  test_control_panel.py  test_cv2_nodes.py  test_embeds.py  test_emoji_store.py  test_help_details.py  test_hybrid_post_core.py  test_iron_banner.py  test_legacy_editor.py  test_legacy_seed.py  test_portal_ops.py  test_post_json.py  test_rotation_editor.py  test_stats_page.py  test_trials.py  (+4 more)
dd/beacon/: __main__.py  bot.py  guild_count_status.py  help.py  help_details.py  mirror_core.py  mirror_worker.py  nav.py  utils.py
dd/common/: auth.py  bot.py  cfg.py  components.py  controller.py  discord_logging.py  emoji_store.py  extension_loader.py  help.py  iron_banner.py  legacy_activities.py  lifecycle.py  lost_sector.py  rotation_schema.py  schemas.py  source.py  utils.py
dd/hmessage/: __init__.py  constants.py  embed.py  message.py
dd/sector_accounting/: __init__.py  legacy_activities.py  sector_accounting.py  utils.py  xur.py
destiny-director/anchor/: __main__.py  autopost.py  bungie_api.py  controller.py  delete_commands.py  embeds.py  gunsmith.py  lost_sector.py  ls.py  posts.py  schemas.py  utils.py  xur.py
destiny-director/beacon/: __main__.py  bot.py  cfg.py  help.py  nav.py  utils.py
destiny-director/common/: cfg.py  lost_sector.py  schemas.py  utils.py
destiny-director/sector_accounting/: __init__.py  sector_accounting.py
docs/: architecture.md  pi_dev_setup.md  rotation_cutover_rollback.md  usage-gate.md  v2_v3_behavior_audit.md
docs/decisions/: anchor_admin_consolidation_for_user_install.md
migrations/: 20240714180000_baseline.sql  20250507125611.sql  20260624005717.sql  20260626161155.sql  20260708174309.sql  20260708183809.sql  20260710235540.sql  20260711193000.sql  20260712000000.sql  20260713165935.sql  20260723183204.sql  20260723213013.sql  atlas.sum
plans/: add_homepage_to_all_pages.md  anchor_web_discord_oauth.md  announcer_disabled_placeholder_leak.md  apply_default_color_to_cv2_container.md  asyncmy_sqli_advisory.md  automated_robust_sheets_rotation.md  autopost_cv2_migration.md  autopost_permission_diagnostics.md  autoposts_state_machine.md  bungie_api_http_client_split.md  cfg_audit_and_cleanup.md  command_usage_statistics.md  commit_v3_rewrite.md  components_v2_embed_editor.md  convert_command_fold_into_edit.md  critical_alert_tracebacks.md  cv2_char_cap_alerts.md  dev_db_auto_wipe_investigation.md  dev_over_prod_review_fixes.md  dev_prefix_removal.md  disable_restarts_in_prod.md  distortion_command.md  dockerfile_deploy_optimization.md  embeds_and_cv2_parallel_first_class.md  emoji_lazy_store.md  error_messages_cv2_consistency.md  eververse_daily_bright_dust_offerings.md  hmessage_to_message_kwargs_dropin.md  homepage.md  js_unit_tests.md  legacy_rotation_cleanups.md  lost_sector_cv2_length.md  memory_leaks.md  mirror_bad_channel_disable_forgiveness.md  mirror_delete_kernel_report_completed_channel_id.md  mirror_improvements.md  mirror_v2_delivery_ledger.md  portal_ops_autopost.md  rebuild_components_media_support.md  remote_pi_docker_dev_env.md  (+21 more)
polarity/: __main__.py  autopost.py  controller.py  embeds.py  release.py  schemas.py  source.py  utils.py
sector_accounting/: sector_accounting.py  xur.py
(+203 files in other folders)
