[project]
name = "dd"
version = "1.0.0"
description = ""
authors = [{ name = "geolocatingshark", email = "geolocatingshark@gmail.com" }]
requires-python = "~=3.12.0"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "aiocron>=1.8",
    "aiofiles>=24.1",
    "aiohttp>=3.13",
    "aiosqlite>=0.20.0",
    "asyncmy>=0.2.9",
    "atlas-provider-sqlalchemy>=0.2.2",
    "attrs>=22.2.0",
    "dateparser>=1.1",
    "fastjsonschema>=2.21.2",
    "gspread>=5.9",
    "hikari-lightbulb>=3.0.0",
    "hikari-toolbox>=0.1.5",
    "hikari==2.5.0",
    "python-dotenv>=1.2.1",
    "regex>=2023.6.3",
    "roman>=4.1",
    "setuptools>=72.1.0",
    "sqlalchemy>=2.0,<3",
    "tzdata>=2025.3",
    "yarl>=1.9",
]


[dependency-groups]
dev = [
    "rope>=1.6",
    "pytest>=7.2",
    "pytest-asyncio>=0.20",
    "ruff>=0.15.18",
    "ty>=0.0.51",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
]

speedups = [
    "hikari[speedups]>=2.0.0.dev126",
    "cryptography>=46.0.3",
]

[tool.uv]
concurrent-installs = 1
default-groups = ["dev", "speedups"]

[tool.hatch.build.targets.sdist]
include = ["dd"]

[tool.hatch.build.targets.wheel]
include = ["dd"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["dd"]
markers = [
    "integration: exercises the database layer (SQLite by default; set TEST_USE_MYSQL=1 for MySQL)",
    "discord: hits live Discord and needs a real bot token (DISCORD_TOKEN_BEACON); excluded from the default suite",
]

[tool.coverage.run]
source = ["dd"]
