[project]
name = "dd"
version = "1.0.0"
description = ""
authors = [{ name = "geolocatingshark", email = "geolocatingshark@gmail.com" }]
requires-python = "~=3.13.0"
readme = "README.md"
license = "AGPL-3.0-or-later"
dependencies = [
    "aiocron>=2.1",
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "asyncmy>=0.2.11",
    "atlas-provider-sqlalchemy>=0.5.0",
    "attrs>=25.4.0",
    "dateparser>=1.4.1",
    "fastjsonschema>=2.21.2",
    "gspread>=6.2.1",
    "hikari-lightbulb>=3.2.4",
    "hikari-toolbox>=0.1.7",
    "hikari>=2.5.0,<3",
    "python-dotenv>=1.2.2",
    "regex>=2026.6.28",
    "roman>=5.2",
    "setuptools>=82.0.1",
    "sqlalchemy>=2.0.51,<3",
    "tzdata>=2026.2",
    "yarl>=1.24.2",
]


[dependency-groups]
dev = [
    "rope>=1.14.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
]

speedups = [
    "hikari[speedups]>=2.5.0,<3",
    "cryptography>=49.0.0",
]

[tool.uv]
concurrent-installs = 1
default-groups = ["dev", "speedups"]

[tool.hatch.build.targets.sdist]
include = ["dd"]

[tool.hatch.build.targets.wheel]
include = ["dd"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["dd"]
markers = [
    "integration: exercises the database layer (SQLite by default; set TEST_USE_MYSQL=1 for MySQL)",
    "discord: hits live Discord and needs a real bot token (DISCORD_TOKEN_BEACON); excluded from the default suite",
]

[tool.coverage.run]
source = ["dd"]
